# setusergroups

./: .gitignore  .travis.yml  COPYING  Makefile  Makefile.am  Makefile.in  README.pod  configure  configure.ac  setusergroups.1  setusergroups.c
SPECS/: setusergroups.spec
